Adding two more StartOMX scripts

--- a/Transportation/index.html
+++ b/Transportation/index.html
@@ -37,11 +37,6 @@
 
 		<ul class="video-controls">
 
-	        <li>
-	        	<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startCCOMX.sh%20&">
-	        		<img src="assets/images/ic_closed_caption_white_48px.svg" class="icon"/>
-	        	</a>
-	        </li>
 
 	        <li>
 	        	<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/stopOMX.sh%202>/dev/null%20&">
@@ -90,7 +85,7 @@
 
 			<div class="cd-section">
 				<div class="cd-modal-action">
-					<a href="#0" class="btn" data-type="modal-trigger">Quick Fact</a>
+					<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startOMX.sh%20&" class="btn">Video #1</a>
 					<span class="cd-modal-bg"></span>
 				</div> <!-- cd-modal-action -->
 
@@ -118,7 +113,7 @@
 
 			<div class="cd-section">
 				<div class="cd-modal-action">
-					<a href="#0" class="btn" data-type="modal-trigger">Quick Fact</a>
+					<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startOMX2.sh%20&" class="btn">Video #2</a>
 					<span class="cd-modal-bg"></span>
 				</div> <!-- cd-modal-action -->
 
@@ -146,7 +141,7 @@
 
 			<div class="cd-section no-csstransitions">
 				<div class="cd-modal-action">
-					<a href="#0" class="btn" data-type="modal-trigger">Quick Fact</a>
+					<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startOMX.sh%20&" class="btn">Video #3</a>
 					<span class="cd-modal-bg"></span>
 				</div> <!-- cd-modal-action -->
 
