Updating video preview sections

--- a/Transportation/index.html
+++ b/Transportation/index.html
@@ -74,99 +74,19 @@
 
 	</div>
 
-	<div class="video-info">
+	<div class="video-preview bg2">
 
-		<div class="title">
-			<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startOMX.sh%20&" class="info-play"></a>
-		</div>
+		<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startOMX2.sh%20&" class="play">
+			<img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/>
+		</a>
 
-		<div class="modal-buttons">
-			
+	</div>
 
-			<div class="cd-section">
-				<div class="cd-modal-action">
-					<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startOMX.sh%20&" class="btn">Video #1</a>
-					<span class="cd-modal-bg"></span>
-				</div> <!-- cd-modal-action -->
+	<div class="video-preview bg3">
 
-				<div class="cd-modal">
-					<div class="cd-modal-content">
-
-
-						<h1>Transportation Fact #1</h1>
-						<p>
-							Quick Fax.
-						</p>
-
-						<!-- <h1>Replacing water wheels</h1>
-						<p>
-							By the late 1870s steam engines had replaced water wheels as the primary source of power in most mills and machine shops. As the sole power source in a factory, a single steam engine provided the energy to run numerous machines at the same time. 
-						</p> -->
-
-					</div> <!-- cd-modal-content -->
-
-				</div> <!-- cd-modal -->
-
-				<a href="#0" class="cd-modal-close">Close</a>
-
-			</div>
-
-			<div class="cd-section">
-				<div class="cd-modal-action">
-					<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startOMX2.sh%20&" class="btn">Video #2</a>
-					<span class="cd-modal-bg"></span>
-				</div> <!-- cd-modal-action -->
-
-				<div class="cd-modal">
-					<div class="cd-modal-content">
-					
-						<h1>Transportation Fact #2</h1>
-						<p>
-							Quick Fax.
-						</p>
-
-						<!-- <h1>Power by rotation</h1>
-						<p>
-							The power from a steam engine transferred to various machines throughout the shop by rotating a large counter wheel fitted with a leather belt, called a line shaft. The line shaft turned a metal rod or axle located above the factory floor. This initial connection was only the first in a series of such connections that powered smaller line shafts and machines throughout the Factory.
-						</p> -->
-
-
-					</div> <!-- cd-modal-content -->
-
-				</div> <!-- cd-modal -->
-
-				<a href="#0" class="cd-modal-close">Close</a>
-
-			</div>
-
-			<div class="cd-section no-csstransitions">
-				<div class="cd-modal-action">
-					<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startOMX.sh%20&" class="btn">Video #3</a>
-					<span class="cd-modal-bg"></span>
-				</div> <!-- cd-modal-action -->
-
-				<div class="cd-modal no-csstransitions">
-					<div class="cd-modal-content">
-
-						<h1>Transportation Fact #2</h1>
-						<p>
-							Quick Fax.
-						</p>
-
-						<!-- <h1>Moving to electric</h1>
-						<p>
-							In today’s factories the canopy of line shafts that powered multiple machines has disappeared. Modern steam powered generators, located far from the shops themselves, provide energy in the form of electric current to run motors at each machine. 
-						</p> -->
-
-					</div> <!-- cd-modal-content -->
-
-				</div> <!-- cd-modal -->
-
-				<a href="#0" class="cd-modal-close">Close</a>
-
-			</div>
-
-		</div> <!-- modal buttons -->
+		<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startOMX3.sh%20&" class="play">
+			<img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/>
+		</a>
 
 	</div>
 
