Adding CC scripts

--- a/Transportation/index.html
+++ b/Transportation/index.html
@@ -72,6 +72,10 @@
 			<img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/>
 		</a>
 
+		<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startCCOMX.sh%20&" class="playcc">
+			<img src="assets/images/ic_closed_caption_white_48px.svg" class="icon"/>
+		</a>
+
 	</div>
 
 	<div class="video-preview bg2">
@@ -80,12 +84,20 @@
 			<img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/>
 		</a>
 
+		<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startCCOMX2.sh%20&" class="playcc">
+			<img src="assets/images/ic_closed_caption_white_48px.svg" class="icon"/>
+		</a>
+
 	</div>
 
 	<div class="video-preview bg3">
 
 		<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startOMX3.sh%20&" class="play">
 			<img src="assets/images/ic_play_circle_outline_white_48px.svg" class="icon"/>
+		</a>
+
+		<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startCCOMX3.sh%20&" class="playcc">
+			<img src="assets/images/ic_closed_caption_white_48px.svg" class="icon"/>
 		</a>
 
 	</div>
