Updating title position and railroad thumbnail

--- a/Transportation/index.html
+++ b/Transportation/index.html
@@ -33,6 +33,7 @@
 
 <div class="wrapper">
 
+
 	<div class="video-controls_wrap">
 
 		<ul class="video-controls">
@@ -64,6 +65,13 @@
 
 	    </ul>
 
+	</div>
+
+		<div class="video-info">
+
+		<div class="title">
+			
+		</div>
 	</div>
 
 	<div class="video-preview bg">
