Updating video info section

--- a/Transportation/index.html
+++ b/Transportation/index.html
@@ -67,13 +67,6 @@
 
 	</div>
 
-		<div class="video-info">
-
-		<div class="title">
-			
-		</div>
-	</div>
-
 	<div class="video-preview bg">
 
 		<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startOMX.sh%20&" class="play">
@@ -110,10 +103,46 @@
 
 	</div>
 
+	<div class="video-info">
+
+		<div class="title">
+			
+		</div>
+
+
+		<div class="modal-buttons">
+			
+
+			<div class="cd-section">
+				<div class="cd-modal-action">
+					<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startOMX.sh%20&" class="btn">Canals</a>
+				</div> <!-- cd-modal-action -->
+
+			</div>
+
+			<div class="cd-section">
+				<div class="cd-modal-action">
+					<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startOMX2.sh%20&" class="btn">Railroads</a>
+				</div> <!-- cd-modal-action -->
+
+			</div>
+
+			<div class="cd-section no-csstransitions">
+				<div class="cd-modal-action">
+					<a href="file:///homepage.html?cmd=/media/PiShare/Git/kiosk_Transportation/startOMX3.sh%20&" class="btn">Roads</a>
+				</div> <!-- cd-modal-action -->
+
+				</div> <!-- cd-modal -->
+
+			</div>
+
+		</div> <!-- modal buttons -->
+	</div>
+
 </div>
 
 
-		</div>	
+</div>	
 
 			
 
